Revision history for Perl extension Search::Xapian.

1.2.21.0
	[Changes contributed by Olly Betts]
	- Support passing collapse_max argument to Enquire::set_collapse_key().
	  Fixes #669, reported by Felix Ostmann.
	- Add missing 'my' to testcases.
	- Add 'use strict' to all testcases.

1.2.20.0  Wed Mar  4 00:30:08 UTC 2015
	[Changes contributed by Olly Betts]
	- Remove TODO for wrapping MatchAll and MatchNothing - these were added
	  in 1.2.13.0.  Reported by Will Crawford.
	- Wrap Xapian::BAD_VALUENO.
	- Fix "make test" to use the Xapian.so we just built, rather than an
	  installed version.

1.2.19.0  Tue Oct 21 00:35:35 UTC 2014
	[Changes contributed by Dmitry Karasik]
	- Fix deliberate leaks in QueryParser::add_valuerangeprocessor() and
	  QueryParser::set_stopper() by tracking object ownership properly.
	  (ticket#647)
	[Changes contributed by Olly Betts]
	- Fix deliberate leaks in TermGenerator::set_stopper() and Enquire
	  methods which allow specifying a Sorter object similarly.

1.2.18.0  Sun Jun 22 06:39:55 UTC 2014
	[Changes contributed by Olly Betts]
	- README: Add link to "Getting Started with Xapian".
	- Mass whitespace clean-up.

1.2.17.0  Wed Jan 29 00:00:00 UTC 2014
	- No change except for bumping the version to indicate compatibility
	  with Xapian 1.2.17.

1.2.16.0  Wed Dec  4 00:00:00 UTC 2013
	[Changes contributed by Olly Betts]
	- t/symbol-test/Makefile.PL: Pass $CPPFLAGS and $CXXFLAGS from the
	  environment through to the sub-build, fixing symbol-test.t failure
	  when built with CPPFLAGS=-D_GLIBCXX_DEBUG.

1.2.15.0  Tue Apr 16 23:43:24 UTC 2013
	[Changes contributed by Olly Betts]
	- Remove superfluous duplicate method wrappers from WritableDatabase
	  for methods wrapped in Database parent class.
	- Improve test coverage.
	- Fix minor typo in POD documentation.

1.2.14.0  Thu Mar 14 23:12:38 UTC 2013
	[Changes contributed by Olly Betts]
	- Perl 5.16.1 adds a '.' after "at foo line 123" so adjust regexp in