@@ -6,6 +6,7 @@ Revision history for Perl extension Search::Xapian.
 	  Fixes #669, reported by Felix Ostmann.
 	- Add missing 'my' to testcases.
 	- Add 'use strict' to all testcases.
+	- Add a "LICENSE" section to the main POD.
 
 1.2.20.0  Wed Mar  4 00:30:08 UTC 2015
 	[Changes contributed by Olly Betts]
